some card fixes, text does not overflow and added scroll feature

--- a/styles/fish.css
+++ b/styles/fish.css
@@ -1,15 +1,13 @@
 .containerLeft__fishList {
     border: 1px solid grey;
-    padding: 0 100px 50px;
+    padding: 25px 50px;
     padding-right: 100px;
 	padding-left: 100px;
     display: flex;
     flex-wrap: wrap;
-    background-color: #c2e1f0;
-    /* flex-direction: row;
-    align-items:flex-start;
-    justify-content: space-around;
-    flex-basis: 85%; */
+    background-color: #C7DBFC;
+    width: auto;
+
 }
 
 .fishList {
@@ -24,7 +22,10 @@
 	margin: 10px;
     object-fit: contain;
     max-width: 250px;
-    max-height: auto;
+    max-height: 350px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    overflow: scroll;
+    text-overflow: ellipsis;
 }
 
 .fishCard img {
