--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,7 @@
 footer {
     /* position: fixed; */
     display: flex;
-    background-color: #87b4d8;
+    background-color: #7DA2E3;
     padding: 5px;
 }
 
