--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 header {
     display: flex;
-    background-color: #5d9bbb;
+    background-color: #7DA2E3;
     padding: 5px;
     justify-content: space-between;
 }
